<resources>
    <string name="app_name">Journaloo</string>

    <!-- Create landing activity strings -->
    <string name="landing_name">Landing</string>
    <string name="history_name">History</string>
    <string name="explore_name">Explore</string>
    <string name="profile_name">Profile</string>
    <string name="start_name">Go Journaloo!</string>
    <string name="landing_text">No current journey</string>

    <!-- Create journey activity strings -->
    <string name="title_name">Create a journey!</string>
    <string name="create_name">Create</string>
    <string name="cancel_name">Cancel</string>
    <string name="journey_name">name of journey</string>

    <string name="title_activity_login">Sign in</string>

    <string name="title_activity_sign_up">Sign up</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_sign_up">action_sign_up</string>
    <string name="prompt_username">prompt_username</string>
    <string name="action_sign_up_short">action_sign_up_short</string>
    <string name="create_new_entry">Create New Entry</string>
    <string name="description">description</string>
    <string name="location">location</string>
    <string name="EntryCardDescription">Insert Description</string>
    <string name="entry_card_description">Description here</string>
    <string name="current_journey">Current Journey</string>
    <string name="journey_stop_button">End</string>
    <string name="EntryCardLocation">Location</string>
    <string name="EntryCardDate">Date</string>
    <string name="signup_message">Don\'t have an account? Sign up here.</string>
    <string name="reset_message">I don\'t remember my password.</string>
    <string name="login_title">Login</string>
    <string name="login_username">Username</string>
    <string name="login_username_textfield">Username</string>
    <string name="login_password">Password</string>
    <string name="login_password_textfield">Password</string>
    <string name="journaloo_auth">journaloo_auth</string>
    <string name="new_entry_button">add</string>
    <string name="new_journey">new journey</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
