<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="10dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/cardView"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/entryImageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/EntryCardImage" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/locationTextView"
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/EntryCardLocation"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/dateTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/EntryCardDate"
                    android:textAlignment="textEnd"
                    android:textColor="#7e7e7e" />
            </LinearLayout>

            <TextView
                android:id="@+id/descriptionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/entry_card_description"
                android:textColor="#555" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>